--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         }
     },
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "lazyjsonmapper/lazyjsonmapper": "^1.6",
         "guzzlehttp/guzzle": "^7.3",
         "ext-curl": "*",
