--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         "clue/http-proxy-react": "^1.1.0",
         "psr/log": "^1.0",
         "valga/fbns-react": "0.3.1",
-        "symfony/process": "^3.4|^4.0",
+        "symfony/process": "^5.4",
         "winbox/args": "1.0.0",
         "ramsey/uuid": "^3.9|^4.0"
     },
