--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "ext-exif": "*",
         "ext-zlib": "*",
         "ext-bcmath": "*",
+        "ext-gmp": "*",
         "react/event-loop": "^1.1",
         "react/promise": "^2.7",
         "react/socket": "^1.3",
