--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     },
     "require": {
         "php": "^7.2|^8.0",
-        "lazyjsonmapper/lazyjsonmapper": "^1.6",
+        "lazyjsonmapper/lazyjsonmapper": "^1.6|^2.0",
         "guzzlehttp/guzzle": "^7.3",
         "ext-curl": "*",
         "ext-mbstring": "*",
