--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "php": "^7.2|^8.0",
         "lazyjsonmapper/lazyjsonmapper": "^1.6|^2.0",
         "guzzlehttp/guzzle": "^7.3",
+	"guzzlehttp/promises": "^1.5",
         "ext-curl": "*",
         "ext-mbstring": "*",
         "ext-gd": "*",
